--- a/first.css
+++ b/first.css
@@ -1,4 +1,4 @@
-.list-group-item{
+/* .list-group-item{
     text-align: center;
 }
 nav-link active:hover{
@@ -33,4 +33,4 @@ font-size: large;
 }
 .card-link{
     justify-content: center;
-}
+} */
